--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   </head>
   <body>
  <ul id="menu"></ul>
+ <h2>asdasdsdad</h2>
     <div id="app"></div>
     <script type="module" src="./src/main.js"></script>
   </body>
